src/test/deca/syntax/invalid/expr/test_expr_sum_two_plus.deca
// Description:
//    tests de programme syntaxiquement incorrects : plus d'un operateur
//
// Resultats:
//    Ligne 13: extraneous input '+' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a ++ 1 == 3) {
        a = 2;
    }
}